clang/test/BSC/Negative/Others/control_flow_graph/structured_control_flow_1/structured_control_flow_1.cbs
// RUN: %clang_cc1 -verify %s

#define NULL (void*)(0)

int test1(){
	int a = 1;
	int *b = &a;
  if (b == NULL) {
    int x0 = 0;
    int *_Owned p0 = __take_from_raw(&x0);      
    goto FAIL; //expected-error {{memory leak of value: `p0`}}
  }
	return 0;
FAIL:
  return 1;
}

int test2(){
	int a = 1;
	int *b = &a;
  if (b == NULL) {
    goto FAIL;                          
  }
  int x0 = 0;
  int *_Owned p0 = __take_from_raw(&x0);
	return 0; //expected-error {{memory leak of value: `p0`}}
FAIL:
  return 1;
}

int test3(){
	int a = 1;
	int *b = &a;
  if (b == NULL) { 
    goto FAIL;
  }
	return 0;
FAIL:{
    int x2 = 0;
    int *_Owned p2 = __take_from_raw(&x2);     
    return 1; //expected-error {{memory leak of value: `p2`}}
  }
}

int g_a = 0;
int test4() {
  int x1 = 0;
  if (g_a) {
    int y = 0;
    int z = 1;
    int *_Owned p1 = __take_from_raw(&y);
    goto next; // expected-error {{memory leak of value: `p1`}}
  }
  int v = 3;
next:{
    int x2 = 0;
    int *_Owned p2 = __take_from_raw(&x2);
    return 0; // expected-error {{memory leak of value: `p2`}}
  }
}